Fix category icon alignment

--- a/exchange/static/css/site_base.css
+++ b/exchange/static/css/site_base.css
@@ -124,11 +124,6 @@ nav.filter h4 a.toggle {
   -webkit-transform:rotate(50deg) skewX(24deg) skewY(12deg);
   -ms-transform:rotate(50deg) skewX(24deg) skewY(12deg);
 }
-.fa-stack {
-  top: 25px;
-  vertical-align: inherit;
-
-}
 .stacked {
   margin-top: 28px;
 }
